<resources>
    <string name="app_name">Timeline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Timeline App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start">START</string>
    <string name="something_wrong">Something wrong... Try again later : ></string>
    <string name="missing">Cannot be missing or blank</string>
    <string name="logout">Log out?</string>
    <string name="just_close">Just close the app</string>
    <string name="loading">LOADING...</string>
    <string name="permission_camera_rationale">Allow camera access?</string>
    <string name="permission_access_storage_rationale">Allow photo library access?</string>
    <string name="permission_write_storage_rationale">Allow saving photo to library?</string>
    <string name="permission_access_location_rationale">Allow location access?</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_allowed">Access allowed</string>
    <string name="permission_denied">Access denied</string>
    <string name="permission_neverask">Never ask again</string>
    <string name="add_title">Add description…</string>
    <string name="add_people">Add collaborators (optional):</string>
    <string name="add_date">Set the date</string>
    <string name="add_location">Set location</string>
    <string name="share">Share</string>
    <string name="publish">Create a story</string>
    <string name="cancel">Cancel</string>
    <string name="all_changes_will_be_lost">All changes will be lost, are you sure you want to exit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="search">Search</string>
    <string name="search_friends">Search friends</string>
    <string name="logout_header">Logout</string>
    <string name="settings_header">Settings</string>
    <string name="profile_header">Profile</string>
    <string name="recent_header">Recent</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="create_account">No account yet? Create one!</string>
    <string name="login_here">Already registered? Login here!</string>
    <string name="fullname">Full Name</string>
    <string name="my_stories">My stories</string>
    <string name="friends_stories">Friends stories</string>
    <string name="post">post</string>
    <string name="done">Done</string>

</resources>
