<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:titleTextColor="@color/white">
    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="15dp">

        <FrameLayout
            android:id="@+id/flStoryPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:onClick="onLaunchCamera">

            <ImageView
                android:id="@+id/ivBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight" />

            <ImageView
                android:id="@+id/ivCameraIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/camera_placeholder" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText
                android:id="@+id/etAddTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:minLines="2"
                android:maxLines="2"
                android:background="@color/colorPrimaryLight"
                android:hint="@string/add_title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:gravity="center|end"
                android:background="@color/colorPrimaryLight"
                tools:text="30"
                android:textSize="15sp" />

        </LinearLayout>

        <!--<TextView-->
        <!--android:id="@+id/tvAddDate"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@color/colorPrimaryLight"-->
        <!--android:fontFamily="sans-serif-condensed"-->
        <!--android:gravity="center_vertical"-->
        <!--android:hint="@string/add_date"-->
        <!--android:onClick="addDate"-->
        <!--android:padding="10dp"-->
        <!--android:textSize="15sp" />-->

        <TextView
            android:id="@+id/tvAddLocation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:hint="@string/add_location"
            android:onClick="addLocation"
            android:padding="10dp"
            android:tag="1"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnPublish"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            android:gravity="center_vertical"
            android:hint="@string/share"
            android:onClick="publish"
            android:padding="10dp"
            android:textSize="15sp"
            fontPath="fonts/Roboto-Bold.ttf" />

    </LinearLayout>

</LinearLayout>